Game class controls now the loading and updating of the scene

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -27,6 +27,7 @@ add_executable(${TARGET_NAME} ${TARGET_PARAM}
   Minigin/Texture2D.cpp
   Minigin/Transform.cpp
   Minigin/FPSComponent.cpp
+  Minigin/Game.cpp
 )
 
 # enable c++20 features
